[package]
name = "debtsolver"
version = "0.1.0"
authors = ["Varun Srinivasan <varunsrin@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/varunsrin/debtsolver"
documentation = "https://docs.rs/debtsolver"
description = """
Track and settle debts between parties with the fewest transactions. 
"""
categories = ["crates.io/category_slugs"]
keywords = ["payments", "debts", "minimize", "reduce"]


[dependencies]
itertools = "0.8.1"
rust_decimal = "1.0.3"
rust_decimal_macros = "1.0.3"
