[package]
name = "debtsolver"
version = "0.2.0"
authors = ["Varun Srinivasan <varunsrin@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/varunsrin/debtsolver"
documentation = "https://docs.rs/debtsolver"
description = """
Track and settle debts between parties with the fewest transactions. 
"""
categories = ["algorithms"]
keywords = ["payments", "debts", "minimize", "reduce"]


[dependencies]
itertools = "0.8.2"
rusty-money = "0.3.0"

